# kanikani_rusty

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml  package-lock.json  package.json
adder/src/: lib.rs
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: film_modal.rs  header.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
shared/: Cargo.toml
shared/src/: models.rs
src/: main.rs
