[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.28.2"

shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.3"
tracing = "0.1"
shared = { path = "../../shared" }
async-trait = "0.1.68"
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
serde = "1.0"
serde_json = "1.0"