[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { path = "../lib" }
axum = "0.7.4"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.28.2"

shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = { workspace = true }
tracing = "0.1"
tower-http = { version = "0.5.2", features = ["fs"] }